# easel

./: .gitignore  README.md  build_executable.sh  bump_version.sh  install.sh  main.py  pyproject.toml
.github/workflows/: release.yml
examples/: apache-access.toml  app.toml  docker.toml  express.toml  fastapi.toml  flask.toml  git.toml  nginx-access.toml  node.toml  postgres.toml  simple.toml  syslog.toml  tomcat.toml
src/: command.py  loader.py  processor.py
test/: test1.toml  test2.toml
tests/: conftest.py  test_attributes.py  test_color_functions.py  test_config.py  test_process_lines.py  test_terminal_style.py
