[project]
name = "easel"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.11.9",
    "pytest>=8.0.0",
    "ruff>=0.13.1",
    "typer>=0.19.2",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.16.0",
    "bump-my-version>=0.20.0",
]

[tool.bumpversion]
current_version = "0.1.0"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
commit = true
tag = true
message = "chore: release v{new_version}"

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = "version = \"{current_version}\""
replace = "version = \"{new_version}\""
